--- a/app/assets/stylesheets/georgia/modules/_activities.scss
+++ b/app/assets/stylesheets/georgia/modules/_activities.scss
@@ -1,3 +1,3 @@
-.activities {
-  padding-top: 20px;
+.body-sidebar .activities h4 {
+  font-size: 0.9em;
 }
